force-app/main/default/objects/Brand__c/Brand__c.object-meta.xml
<CustomObject>
    <label>Brand</label>
    <nameField>
        <label>Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>