force-app/main/default/objects/Brand__c/fields/Currencies__c.field-meta.xml
<CustomField>
    <fullName>Currencies__c</fullName>
    <label>Currencies</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EURO</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>