force-app/main/default/objects/Brand__c/fields/Frequency_Commissions_Report__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Commissions_Report__c</fullName>
    <label>Frequency Commissions Report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>