force-app/main/default/objects/Brand__c/fields/Terms_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Terms_of_Delivery__c</fullName>
    <label>Terms of Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FCA Free Carrier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>