force-app/main/default/objects/Brand__c/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <label>VAT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>